# tan2_2024

cours-tan/: README.md  pyproject.toml  requirements.txt
cours-tan/notebooks/ROOT/chap3/: lu.ipynb  pivot.ipynb  stabilite.ipynb  triangulaire.ipynb
cours-tan/notebooks/ROOT/chap4/: 2-itermeth.ipynb  3-splitting.ipynb  4-gradient.ipynb  5-gradient-conjugue.ipynb  6-comparaison.ipynb  index.ipynb
cours-tan/notebooks/ROOT/chap5/: 2-methodes.ipynb  3-retour-exemple.ipynb  index.ipynb
cours-tan/notebooks/ROOT/chap6/: 1-dichotomie.ipynb  2-newton.ipynb  3-pointfixe.ipynb  4-applications.ipynb  5-corde.ipynb  6-sysnonlin.ipynb  index.ipynb
cours-tan/notebooks/ROOT/chap7/: 1-integrales-simples.ipynb  2-integrales-composites.ipynb  3-quadratures.ipynb  4-exemples.ipynb  index.ipynb
cours-tan/notebooks/ROOT/chap8/: 1-intro.ipynb  2-derivation.ipynb  3-differences-finies.ipynb  4-stabilite.ipynb  5-convergence.ipynb  6-methodes-unpas.ipynb  7-methodes-multipas.ipynb  7-systeme.ipynb  index.ipynb  (+1 more)
cours-tan/notebooks/exos/: serie1.ipynb  serie10.ipynb  serie2.ipynb  serie3.ipynb  serie4.ipynb  serie5.ipynb  serie6.ipynb  serie7.ipynb  serie8.ipynb  serie9.ipynb
cours-tan/notebooks/python/: functions.ipynb  loop-branch.ipynb  matrix.ipynb  plot.ipynb  python.ipynb  vector.ipynb
cours-tan/tan/: matrix.py
cours-tan/tan.egg-info/: PKG-INFO  SOURCES.txt
cours-tan/tan/eig/: eigpower.py  qrbasic.py  wilkinson.py
cours-tan/tan/eqnonlin/: fixpoint.py
cours-tan/tan/ode/: beuler.py  heun.py  rk4.py
cours-tan/tan/syslin/: gauss_seidel.py  gradient.py  jacobi.py  pcg.py
(+9 files in other folders)
